# computational_geometry

./: CMakeLists.txt  README.md  calculational_geometry.code-workspace
include/: IPoint.hpp  ISegment.hpp  IVector.hpp  Library.hpp  Point.hpp  Ray.hpp  Segment.hpp  Vector.hpp
src/: Library.cpp  Point.cpp  Ray.cpp  Segment.cpp  Vector.cpp  main.cpp
